--- a/sycl/doc/extensions/experimental/sycl_ext_oneapi_kernel_compiler.asciidoc
+++ b/sycl/doc/extensions/experimental/sycl_ext_oneapi_kernel_compiler.asciidoc
@@ -811,9 +811,15 @@ the host application interact with device globals defined in runtime-compiled
 code. Device globals are only supported for the `source_language::sycl`
 language.
 
-Device globals declared with the `device_image_scope` property can be used in
-the runtime-compiled device code, but cannot be accessed from the host. We plan
-to lift this limitation in a future version of the extension.
+This extension currently supports only a subset of the
+link:../experimental/sycl_ext_oneapi_device_global.asciidoc[
+sycl_ext_oneapi_device_global] extension:
+
+* Device globals must be declared at global scope.
+* Device globals declared with the `device_image_scope` property can be used in
+the runtime-compiled device code, but cannot be accessed from the host.
+
+We plan to lift both limitations in a future version of this extension.
 
 [source,c++]
 ----
@@ -852,9 +858,6 @@ _Returns:_ The value `true` only if
   `bundle_state::ext_oneapi_source` in the language `source_language::sycl`, and
 * it defines a device global whose name is `name` and which was declared without
   the `device_image_scope` property.
-
-`name` must be a {cpp} identifier that is valid for referencing the device
-global at the bottom of the source code.
 
 a|
 [frame=all,grid=none]
