--- a/sycl/doc/extensions/experimental/sycl_ext_oneapi_bindless_images.asciidoc
+++ b/sycl/doc/extensions/experimental/sycl_ext_oneapi_bindless_images.asciidoc
@@ -1337,7 +1337,7 @@ DataT sample_image(const sampled_image_handle &ImageHandle,
 
 template <typename DataT>
 DataT gather_image(const sampled_image_handle &ImageHandle,
-                   const sycl::float2 &Coords, const int Component = 0);
+                   const sycl::float2 &Coords, const unsigned Component);
 
 template <typename DataT, typename CoordT>
 void write_image(unsampled_image_handle ImageHandle,
@@ -1348,10 +1348,10 @@ void write_image(unsampled_image_handle ImageHandle,
 Inside a kernel, it's possible to retrieve data from an image via `fetch_image` 
 or `sample_image`, passing the appropriate image handle. The `fetch_image` API 
 is applicable to sampled and unsampled images, and the data will be fetched 
-exactly as is in device memory.
-The `sample_image` and `gather_image` APIs are only applicable to
-sampled images. For both APIs the image data will be sampled according to the
-`bindless_image_sampler` that was passed to the image upon construction.
+exactly as is in device memory. The `sample_image` and `gather_image` APIs are
+only applicable to sampled images. For both APIs the image data will be sampled
+according to the `bindless_image_sampler` that was passed to the image upon
+construction.
 
 When fetching from a sampled image handle, data exactly as is in memory, no 
 sampling operations will be performed, and the `bindless_image_sampler` passed 
@@ -1423,10 +1423,11 @@ defined sampling function will result in undefined behaviour.
 `DataT` is a vector type with four components. DataT can only be `sycl::float4`
 , `sycl::int4`, or `sycl::uint4`. `ImageHandle` must be a two dimensional image
 instantiated using an `image_descriptor` with non-zero `width` and `height`
-members. The `image_descriptor::depth` member must be zero.
-The return values, `DataT`, consist of the four texture, `T`, coordinates that
-would be used for linear filtering of `ImageHandle` at the coordinate specified
-by `Coords`, and for channel component `Component`.
+members. The `image_descriptor::depth` member must be zero. If these conditions
+are not satisfied then a `sycl::exception` is thrown with error code
+`sycl::errc::invalid`. The return values, `DataT`, consist of the four texture,
+`T`, coordinates that would be used for linear filtering of `ImageHandle` at
+the coordinate specified by `Coords`, and for channel component `Component`.
 
 These coordinates are returned as follows:
 
@@ -1437,21 +1438,24 @@ These coordinates are returned as follows:
 
 where `i` and `j` are calculated depending on the
 `sycl::coordinate_normalization_mode` used to constuct `ImageHandle` via a
-`bindless_image_sampler`.
-For `sycl::coordinate_normalization_mode::unnormalized` (in units of the image
+`bindless_image_sampler`. For
+`sycl::coordinate_normalization_mode::unnormalized` (in units of the image
 discretization) they are calculated as:
 
 - `i = floor(Coords.x - 0.5)`
 - `j = floor(Coords.y - 0.5)`
 
-In the Cuda backend there are different restrictions on the sizes of an image
-that can be created for a given device when `gather_image` is being used
-(Consult the latest backend specific documentation for more information).
-As such, for guaranteed correctness in the Cuda backend, it is also necessary
-to construct `ImageHandle` using an `image_descriptor` with member
-`image_type::gather`.
-Using a value `image_descriptor::num_channels < 4` to construct `ImageHandle`
-results in undefined behavior.
+[NOTE]
+=====
+In the CUDA backend there are different restrictions on the sizes of an image
+that can be created for a given device when `gather_image` is being used.
+=====
+
+For guaranteed correctness and portability across backends, it is necessary to
+construct `ImageHandle` using an `image_descriptor` with member
+`image_type::gather`. Calling `gather_image` on an `ImageHandle` constructed
+with `image_descriptor::num_channels < 4` will result in undefined behavior.
+
 ====
 
 === Recognized standard types [[recognized_standard_types]]
